structmeta-tests/tests/compile_fail/to_tokens/mismatch_delimiter.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/to_tokens/mismatch_delimiter.rs:6:5
  |
5 |     #[to_tokens("(")]
  |     - arguments to this function are incorrect
6 |     bracket_token: syn::token::Bracket,
  |     ^^^^^^^^^^^^^ expected `&Paren`, found `&Bracket`
  |
  = note: expected reference `&syn::token::Paren`
             found reference `&syn::token::Bracket`
note: method defined here
 --> $CARGO/syn-$VERSION/src/token.rs
  |
  |                   pub fn surround<F>(&self, tokens: &mut TokenStream, f: F)
  |                          ^^^^^^^^
...
  | / define_delimiters! {
  | |     Brace         pub struct Brace        /// `{`&hellip;`}`
  | |     Bracket       pub struct Bracket      /// `[`&hellip;`]`
  | |     Parenthesis   pub struct Paren        /// `(`&hellip;`)`
  | | }
  | |_- in this macro invocation
  = note: this error originates in the macro `define_delimiters` (in Nightly builds, run with -Z macro-backtrace for more info)
